force-app/main/default/objects/MyOffer__c/MyOffer__c.object-meta.xml
<CustomObject>
    <label>MyOffer</label>
    <nameField>
        <label>MyOffer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyOffers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>