force-app/main/default/objects/MyOffer__c/fields/Date_from__c.field-meta.xml
<CustomField>
    <fullName>Date_from__c</fullName>
    <label>Date from</label>
    <type>DateTime</type>
</CustomField>