force-app/main/default/objects/MyOffer__c/fields/Date_to__c.field-meta.xml
<CustomField>
    <fullName>Date_to__c</fullName>
    <label>Date to</label>
    <type>DateTime</type>
</CustomField>