force-app/main/default/objects/MyOffer__c/fields/Tag1__c.field-meta.xml
<CustomField>
    <fullName>Tag1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tag1</label>
    <referenceTo>OfferTag__c</referenceTo>
    <relationshipLabel>MyOffers</relationshipLabel>
    <relationshipName>MyOffers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>