force-app/main/default/objects/MyOffer__c/fields/Tag2__c.field-meta.xml
<CustomField>
    <fullName>Tag2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tag2</label>
    <referenceTo>OfferTag__c</referenceTo>
    <relationshipLabel>MyOffers (Tag2)</relationshipLabel>
    <relationshipName>MyOffers1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>