force-app/main/default/objects/MyOffer__c/fields/Tag3__c.field-meta.xml
<CustomField>
    <fullName>Tag3__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tag3</label>
    <referenceTo>OfferTag__c</referenceTo>
    <relationshipLabel>MyOffers (Tag3)</relationshipLabel>
    <relationshipName>MyOffers2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>